--- a/index.html
+++ b/index.html
@@ -1,163 +1,267 @@
-<!DOCTYPE html> 
- <html lang="de"> 
- <head> 
- <meta charset="utf-8"> 
- <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
- <title>💈 C&D Barbershop – Black Edition</title> 
- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"> 
- <style> 
- body { 
-   font-family:'Poppins',sans-serif; 
-   background:#000; 
-   color:#fff; 
-   margin:0; 
-   padding:0; 
- } 
- .container{width:90%;max-width:1200px;margin:0 auto;padding:20px;} 
- h2{text-align:center;margin-bottom:30px;font-weight:700;text-shadow:0 0 15px rgba(255,255,255,0.8);} 
-.header-banner{width:100%;height:300px;display:flex;justify-content:center;align-items:center;background:#000;overflow:hidden;}
- 
- .header-banner img{max-width:100%;max-height:100%;object-fit:contain;filter:brightness(1.2) contrast(1.1);} 
- .welcome-section{padding:30px 
-20px;background:rgba(255,255,255,0.05);border-radius:15px;max-width:900px;margin:40px
- auto;text-align:center;box-shadow:0 10px 30px rgba(0,0,0,0.7);} 
- .welcome-section h1{font-size:2em;margin-bottom:10px;} 
- .welcome-section p{color:#ddd;line-height:1.6;} 
- .image-price-section{text-align:center;padding:20px 
-0;margin-bottom:50px;background:rgba(255,255,255,0.03);border-radius:15px;box-shadow:0
- 10px 30px rgba(0,0,0,0.7);} 
- .image-price-section img{max-width:500px;width:90%;border-radius:10px;box-shadow:0 0 15px rgba(255,255,255,0.2);} 
- .guestbook-section{padding:40px 20px;margin:40px 
-auto;background:rgba(255,255,255,0.05);border-radius:15px;max-width:700px;box-shadow:0
- 10px 30px rgba(0,0,0,0.7);} 
- .guestbook-section input,.guestbook-section 
-textarea{width:100%;padding:10px;margin-bottom:15px;border:1px solid 
-rgba(255,255,255,0.2);border-radius:8px;background:rgba(0,0,0,0.5);color:#fff;}
- 
- .guestbook-section 
-button{width:100%;padding:12px;border:none;border-radius:8px;background:#fdd835;color:#000;font-weight:700;cursor:pointer;}
- 
- .guestbook-section button:hover{background:#ffeb3b;} 
- #successMsg{text-align:center;color:#0f0;display:none;margin-top:10px;} 
- #guestEntries div{background:rgba(255,255,255,0.05);border-left:4px 
-solid #fdd835;padding:10px 15px;border-radius:8px;margin-bottom:15px;} 
- .opening-hours{text-align:center;} 
- .opening-hours ul{list-style:none;padding:0;display:inline-block;text-align:left;} 
- .opening-hours li{padding:5px 0;border-bottom:1px solid rgba(255,255,255,0.1);} 
- footer{text-align:center;padding:15px 
-0;background:#050505;color:#888;margin-top:50px;border-top:1px solid 
-rgba(255,255,255,0.1);} 
- .social-links a img{width:28px;height:28px;margin:0 8px;} 
- @media(max-width:768px){.header-banner{height:200px;}.image-price-section img{max-width:100%;}} 
- </style> 
- </head> 
- <body> 
- <div class="header-banner"> 
-   <img 
+<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>💈 C&D Barbershop – Black & Gold Edition</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<style>
+body {
+    font-family:'Poppins', sans-serif;
+    background: #000;
+    color: #fff;
+    margin: 0;
+    padding: 0;
+}
+.container{width: 90%; max-width: 1200px; margin: 0 auto; padding: 20px;}
+h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: #fdd835; text-shadow: 0 0 15px rgba(253, 216, 53, 0.4);} 
+.header-banner{width: 100%; height: 300px; display: flex; justify-content: center; align-items: center; background: #000; overflow: hidden;}
+.header-banner img{max-width: 100%; max-height: 100%; object-fit: contain; filter: brightness(1.2) contrast(1.1);} 
+.welcome-section{padding: 30px 20px; background: rgba(255, 255, 255, 0.05); border-radius: 15px; max-width: 900px; margin: 40px auto; text-align: center; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);} 
+.welcome-section h1{font-size: 2em; margin-bottom: 10px; color: #fdd835;} 
+.welcome-section p{color: #ddd; line-height: 1.6;} 
+.image-price-section{text-align: center; padding: 20px 0; margin-bottom: 50px; background: rgba(255, 255, 255, 0.03); border-radius: 15px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);} 
+.image-price-section img{max-width: 500px; width: 90%; border-radius: 10px; box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);} 
+
+/* NEUE & GEÄNDERTE STYLES FÜR GÄSTEBUCH */
+.guestbook-section {
+    padding: 40px 20px; 
+    margin: 40px auto; 
+    background: #000; /* Schwarzer Hintergrund für den Bereich */
+    max-width: 950px; /* Breiter für die Figuren */
+    position: relative;
+    box-sizing: border-box;
+    min-height: 700px;
+}
+.guestbook-wrapper {
+    background: rgba(255, 255, 255, 0.05); /* Hintergrund für den Formularbereich */
+    border-radius: 15px;
+    padding: 30px;
+    max-width: 600px;
+    margin: 0 auto;
+    box-shadow: 0 0 40px rgba(253, 216, 53, 0.2);
+    position: relative;
+    z-index: 10; /* Damit das Formular über den Figuren ist */
+}
+
+/* Positionierung der freigestellten Figuren */
+.barber-figure {
+    position: absolute;
+    width: 350px; /* Große Figuren */
+    height: auto;
+    object-fit: contain;
+    bottom: 50px;
+    z-index: 5;
+}
+.barber-figure.left {
+    left: 0;
+}
+.barber-figure.right {
+    right: 0;
+}
+.scissors-icon, .comb-icon {
+    font-size: 60px;
+    color: #fdd835;
+    position: absolute;
+    top: 35%;
+    z-index: 5;
+    opacity: 0.8;
+}
+.scissors-icon {
+    left: 20px;
+    transform: rotate(30deg);
+}
+.comb-icon {
+    right: 20px;
+    transform: scaleX(-1) rotate(-30deg);
+}
+
+/* Formular Styles */
+.guestbook-section h2 {
+    font-size: 3em;
+    margin-bottom: 5px;
+    color: #fdd835;
+    text-shadow: 0 0 15px rgba(253, 216, 53, 0.6);
+}
+.guestbook-section p {
+    text-align: center;
+    color: #ddd;
+    margin-bottom: 25px;
+}
+.guestbook-section input, .guestbook-section textarea{
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 15px;
+    border: 1px solid rgba(253, 216, 53, 0.4); /* Gold-Rand */
+    border-radius: 8px;
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    box-sizing: border-box;
+}
+.guestbook-section input::placeholder, .guestbook-section textarea::placeholder {
+    color: #aaa;
+    font-style: italic;
+}
+.guestbook-section textarea {
+    min-height: 120px;
+    resize: vertical;
+}
+
+.guestbook-section button{
+    width: 100%;
+    padding: 12px;
+    border: none;
+    border-radius: 8px;
+    background: #fdd835;
+    color: #000;
+    font-weight: 700;
+    cursor: pointer;
+    box-shadow: 0 4px 15px rgba(253, 216, 53, 0.4);
+    transition: background 0.3s, transform 0.2s;
+}
+.guestbook-section button:hover{background: #ffeb3b; transform: translateY(-1px);} 
+#successMsg{text-align: center; color: #0f0; display: none; margin-top: 15px; font-weight: 600;} 
+#guestEntries div{background: rgba(255, 255, 255, 0.05); border-left: 4px solid #fdd835; padding: 10px 15px; border-radius: 8px; margin-bottom: 15px;} 
+.opening-hours{text-align: center;} 
+.opening-hours ul{list-style: none; padding: 0; display: inline-block; text-align: left;} 
+.opening-hours li{padding: 5px 0; border-bottom: 1px solid rgba(255, 255, 255, 0.1);} 
+footer{text-align: center; padding: 15px 0; background: #050505; color: #888; margin-top: 50px; border-top: 1px solid rgba(255, 255, 255, 0.1);} 
+.social-links a img{width: 28px; height: 28px; margin: 0 8px;} 
+@media(max-width: 1024px){
+    .barber-figure{width: 300px; bottom: 100px;}
+    .barber-figure.left{left: -30px;}
+    .barber-figure.right{right: -30px;}
+}
+@media(max-width: 768px){
+    .header-banner{height: 200px;}
+    .image-price-section img{max-width: 100%;}
+    .barber-figure{display: none;} /* Figuren auf kleinen Geräten ausblenden */
+    .scissors-icon, .comb-icon {display: none;}
+    .guestbook-section {min-height: auto;}
+} 
+</style> 
+</head> 
+<body> 
+
+<div class="header-banner"> 
+  <img 
 src="https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/Barbershop-logo7.png"
  alt="C&D Barbershop Banner"> 
- </div> 
- <div class="welcome-section"> 
-   <h1>Willkommen bei C&D Barbershop</h1> 
-   <p>Schön, dass Sie hier sind! C&D Barbershop steht für 
+</div> 
+<div class="welcome-section"> 
+  <h1>Willkommen bei C&D Barbershop</h1> 
+  <p>Schön, dass Sie hier sind! C&D Barbershop steht für 
 Qualität, Stil und Persönlichkeit. In einer modernen Atmosphäre bieten 
 wir individuelle Beratung, trendige Schnitte und hochwertige Pflege – 
 für Ihr perfektes Haar- und Bartgefühl.</p> 
- </div> 
- <div class="container image-price-section"> 
-   <h2>💇‍♂️ Unsere Preisliste</h2> 
-   <img src="images/Barbershop-preisliste.png" alt="Aktuelle Preisliste"> 
- </div> 
- <div class="container guestbook-section"> 
-   <h2>⭐ Ihr Feedback</h2> 
-   <p style="text-align:center;color:#aaa;">Wir freuen uns über Ihre Meinung!</p> 
-   <form id="guestbookForm"> 
-     <label for="guestName">Ihr Name:</label> 
-     <input type="text" id="guestName" required> 
-     <label for="guestText">Ihr Beitrag:</label> 
-     <textarea id="guestText" required></textarea> 
-     <button type="submit">Beitrag absenden</button> 
-   </form> 
-   <p id="successMsg">✅ Vielen Dank für Ihren Eintrag!</p> 
-   <div id="guestEntries"></div> 
- </div> 
- <div class="container opening-hours"> 
-   <h2>📍 Kontakt</h2> 
-   <p>Bachgasse 68, 69502 Hemsbach</p> 
-   <p>📞 0176 70794224</p> 
-   <div class="social-links"> 
+</div> 
+<div class="container image-price-section"> 
+  <h2>💇‍♂️ Unsere Preisliste</h2> 
+  <img src="images/Barbershop-preisliste.png" alt="Aktuelle Preisliste"> 
+</div> 
+
+<div class="container guestbook-section"> 
+  
+  <img src="URL_MANN_LINKS_FREIGESTELLT.png" alt="Inhaber Links" class="barber-figure left">
+  <img src="URL_MANN_RECHTS_FREIGESTELLT.png" alt="Inhaber Rechts" class="barber-figure right">
+
+  <i class="fas fa-cut scissors-icon"></i>
+  <i class="fas fa-solid fa-tooth comb-icon"></i>
+
+  <div class="guestbook-wrapper">
+    <h2>GÄSTEBUCH</h2> 
+    <p>Wir freuen uns über Ihre Meinung!</p> 
+    <form id="guestbookForm"> 
+      <input type="text" id="guestName" placeholder="DEIN NAME" required> 
+      <textarea id="guestText" placeholder="DEINE NACHRICHT" required></textarea> 
+      
+      <button type="submit">EINTRAG ABSCHICKEN</button> 
+    </form> 
+    <p id="successMsg">✅ Vielen Dank für Ihren Eintrag!</p> 
+  </div>
+
+  <div id="guestEntries"></div> 
+</div> 
+
+<div class="container opening-hours"> 
+  <h2>📍 Kontakt</h2> 
+  <p>Bachgasse 68, 69502 Hemsbach</p> 
+  <p>📞 0176 70794224</p> 
+  <div class="social-links"> 
     <a href="https://www.instagram.com/cd_barbershop_/" target="_blank"><img 
 src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"
  alt="Instagram"></a> 
-   </div> 
-   <h3>Öffnungszeiten</h3> 
-   <ul> 
-     <li><strong>Montag – Freitag:</strong><br>09:00 – 19:00 Uhr</li> 
-     <li><strong>Samstag:</strong><br>09:00 – 18:00 Uhr</li> 
-     <li><strong>Sonntag:</strong><br>Geschlossen ⛔</li> 
-   </ul> 
-   <p><a 
+  </div> 
+  <h3>Öffnungszeiten</h3> 
+  <ul> 
+    <li><strong>Montag – Freitag:</strong><br>09:00 – 19:00 Uhr</li> 
+    <li><strong>Samstag:</strong><br>09:00 – 18:00 Uhr</li> 
+    <li><strong>Sonntag:</strong><br>Geschlossen ⛔</li> 
+  </ul> 
+  <p><a 
 href="https://www.google.com/maps/dir/?api=1&destination=Bachgasse+68,+69502+Hemsbach"
  target="_blank" style="color:#fdd835;">Route auf Google Maps 
 öffnen</a></p> 
- </div> 
- <footer> 
-   © 2025 C&D Barbershop | Black Edition 
- </footer> 
- <script> 
- // ✅ AKTUELLE GOOGLE-SCRIPT-URL 
- const sheetURL = 
+</div> 
+<footer> 
+  © 2025 C&D Barbershop | Black Edition 
+</footer> 
+<script> 
+// ✅ AKTUELLE GOOGLE-SCRIPT-URL 
+const sheetURL = 
 "https://script.google.com/macros/s/AKfycbx-MmXEQuTij8xhVIR5RUUN91EOH5bTM4QkjeVx5OQhg6cPFZmUZkT79jCWi-RITY-v/exec";
  
- const form=document.getElementById("guestbookForm"); 
- const guestEntriesDiv=document.getElementById("guestEntries"); 
- const successMsg=document.getElementById("successMsg"); 
- // --- Einträge laden (GET) --- 
- async function loadEntries(){ 
-   try{ 
-     const res=await fetch(sheetURL); 
-     const entries=await res.json(); 
-     if(!entries||!entries.length){ 
-       guestEntriesDiv.innerHTML='<p style="text-align:center;color:#888;">Noch keine Einträge.</p>'; 
-       return; 
-     } 
-     guestEntriesDiv.innerHTML=entries.reverse().map(e=>{ 
-       const d=new Date(e.date); 
-       const 
+const form=document.getElementById("guestbookForm"); 
+const guestEntriesDiv=document.getElementById("guestEntries"); 
+const successMsg=document.getElementById("successMsg"); 
+// --- Einträge laden (GET) --- 
+async function loadEntries(){ 
+  try{ 
+    const res=await fetch(sheetURL); 
+    const entries=await res.json(); 
+    if(!entries||!entries.length){ 
+      guestEntriesDiv.innerHTML='<p style="text-align:center;color:#888;">Noch keine Einträge.</p>'; 
+      return; 
+    } 
+    // Hier musste ich das Element mit dem Namen 'guestEntries' umrahmen, um das Design von dir zu integrieren
+    guestEntriesDiv.innerHTML=entries.reverse().map(e=>{ 
+      const d=new Date(e.date); 
+      const 
 dateString=d.toLocaleString('de-DE',{day:'2-digit',month:'2-digit',year:'numeric',hour:'2-digit',minute:'2-digit'});
  
-       return `<div> 
-         <strong>${e.name||'Anonym'}</strong> 
-         <span style="color:#888;font-size:0.9em;"> (${dateString})</span> 
-         <p style="color:#ccc;margin-top:5px;">${e.text}</p> 
-       </div>`; 
-     }).join(''); 
-   }catch(err){ 
-     console.error(err); 
-     guestEntriesDiv.innerHTML='<p style="text-align:center;color:red;">Fehler beim Laden der Einträge.</p>'; 
-   } 
- } 
- // --- Formular absenden (POST) --- 
- form.addEventListener("submit",async e=>{ 
-   e.preventDefault(); 
-   const name=document.getElementById("guestName").value.trim(); 
-   const text=document.getElementById("guestText").value.trim(); 
-   if(!name||!text)return; 
-   try{ 
-     const data=new FormData(); 
-     data.append("name",name); 
-     data.append("text",text); 
-     await fetch(sheetURL,{method:"POST",body:data}); 
-     form.reset(); 
-     successMsg.style.display="block"; 
-     setTimeout(()=>successMsg.style.display="none",3000); 
-     loadEntries(); 
-   }catch(err){ 
-     console.error(err); 
-     alert("Fehler beim Senden!"); 
-   } 
- }); 
- document.addEventListener("DOMContentLoaded",loadEntries); 
- </script> 
- </body> 
- </html>
+      return `<div> 
+        <strong>${e.name||'Anonym'}</strong> 
+        <span style="color:#888;font-size:0.9em;"> (${dateString})</span> 
+        <p style="color:#ccc;margin-top:5px;">${e.text}</p> 
+      </div>`; 
+    }).join(''); 
+  }catch(err){ 
+    console.error(err); 
+    guestEntriesDiv.innerHTML='<p style="text-align:center;color:red;">Fehler beim Laden der Einträge.</p>'; 
+  } 
+} 
+// --- Formular absenden (POST) --- 
+form.addEventListener("submit",async e=>{ 
+  e.preventDefault(); 
+  const name=document.getElementById("guestName").value.trim(); 
+  const text=document.getElementById("guestText").value.trim(); 
+  if(!name||!text)return; 
+  try{ 
+    const data=new FormData(); 
+    data.append("name",name); 
+    data.append("text",text); 
+    await fetch(sheetURL,{method:"POST",body:data}); 
+    form.reset(); 
+    successMsg.style.display="block"; 
+    setTimeout(()=>successMsg.style.display="none",3000); 
+    loadEntries(); 
+  }catch(err){ 
+    console.error(err); 
+    alert("Fehler beim Senden!"); 
+  } 
+}); 
+document.addEventListener("DOMContentLoaded",loadEntries); 
+</script> 
+</body> 
+</html>
