--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: var(--gold-
 
 .guestbook-section-custom {
     /* **WICHTIG: ERSETZEN SIE DIESE URL MIT DER KORREKTEN, ÖFFENTLICHEN BILD-URL!** */
-    background-image: url('https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/Gaestebuch_neu.png'); 
+    background-image: url('https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/Gästebuch.png'); 
     background-size: cover; 
     background-position: center center;
     background-repeat: no-repeat;
