--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ footer{
 
     /* **WICHTIGE ANPASSUNG HIER:** Hintergrundbild auf Mobile beibehalten */
     .guestbook-section-custom {
-        background-image: url('https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/Gaestebuch_neu.png'); /* Bild wieder aktivieren */
+        background-image: url('https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/Gästebuch.png'); /* Bild wieder aktivieren */
         background-size: cover; 
         background-position: center bottom; /* Position für Handy anpassen, um relevanten Teil zu zeigen */
         min-height: 500px; /* Kleinere Mindesthöhe für Mobile */
