--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: var(--gold-
 }
 
 .guestbook-section-custom {
+    /* ACHTUNG: Ich habe die URL auf die neue (korrekte) Gästebuch-Vorschau gesetzt, falls dies das gewünschte Bild ist. */
     background-image: url('https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/Gästebuch.png'); 
     background-size: cover; 
     background-position: center center;
